--- a/components/config/Cargo.toml
+++ b/components/config/Cargo.toml
@@ -13,6 +13,7 @@ chrono = "0.4"
 globset = "0.4"
 lazy_static = "1"
 syntect = "4.1"
+unic-langid = "0.9"
 
 errors = { path = "../errors" }
 utils = { path = "../utils" }
