Move taxonomies to language options dict

--- a/test_site_i18n/config.toml
+++ b/test_site_i18n/config.toml
@@ -13,13 +13,15 @@ generate_feed = true
 
 taxonomies = [
     {name = "authors", feed = true},
-    {name = "auteurs", lang = "fr"},
     {name = "tags"},
-    {name = "tags", lang = "fr"},
 ]
 
 [languages.fr]
 generate_feed = true
+taxonomies = [
+    {name = "auteurs", lang = "fr"},
+    {name = "tags", lang = "fr"},
+]
 
 [languages.it]
 build_search_index = true
